"ChangeLog"

2006-09-03	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-08:
	  Packaging improvements:
	  Make.stddef: DISTHOOK_CLEANFILES variable for automatic 
		distribution removal, per Makefile.  
	  Make.global: new distdir-subdir target for manually
		building subtree of distribution for diagnostics.  


2006-08-29	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-05:
	  config/lexyacc.am: defined HACKT_YACC_PURE_PARSER macro.
	  config/config_subst.awK: not using anymore, added POSIX comment.
		No longer depends on any posix standard behavior.
	  configure.ac: plain AC_CONFIG_FILES output of yacc sources.  


2006-08-24	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03:
	  configure.ac: added test/quarantine/Makefile to output list.


2006-08-22	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80:
	  Duplicate tag.


2006-08-21	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-61:
	  Updated scripts/maintainerclobber, result is now squeaky clean!


2006-08-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-60:
	  Added AC_PATH_X for future planning.


2006-08-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-58:
	  Makefile maintainence:
		Fixed cvsignore target recursiveness, using Makefile.in's
		template recipe for RECURSIVE_TARGETS (MORE_RECURSIVE_TARGETS)


2006-08-09	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-54-prsim-07-06:
	  configure.ac: check for unsigned type aliases, like uchar.  


2006-08-07	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-51:
	  config/config_subst.awk: handle autoconf-2.60 substitution sugar.
	  bootstrap now supports autoconf-2.60.


2006-08-04	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-49:
	  Added MAINTAINER-checklist and CONTRIBUTORS.  

