@@ -1,0 +1,17 @@
+"BRANCHES"
+	$Id: BRANCHES,v 1.1 2006/10/06 03:30:08 fang Exp $
+
+This file contains a list of currently open branches.  
+We don't want to forget branches!.  
+When a branch is opened, add an entry to this file ON THE MAIN TRUNK.  
+When a branch is merged for the last time, delete the entry from this file.
+
+
+Open branches:
+
+HACKT-00-01-04-main-00-80-03-instance-00
+	Reworking instance hierarchy structures to reduce duplication
+	and cut memory usage by a huge amount.  Very invasive changes.  
+
+
+
