@@ -1,6 +1,6 @@
 % "chapters/PRS.tex"
 
-%	$Id: PRS.tex,v 1.5 2006/01/22 06:52:50 fang Exp $
+%	$Id: PRS.tex,v 1.6 2006/10/06 03:30:10 fang Exp $
 
 \chapter{Production Rule Set (PRS)}
 \label{sec:prs}
@@ -172,28 +172,33 @@ some custom topology of a netlist or as shorthand for an expansion.
 We propose the following syntax for macros:
 
 \begin{itemize}
+\item \tit{PRS-macro} : \tit{identifier} \ttt{<} \tit{expr-list} \ttt{>} \ttt{(} \tit{PRS-literal-list} \ttt{)}
 \item \tit{PRS-macro} : \tit{identifier} \ttt{(} \tit{PRS-literal-list} \ttt{)}
 \end{itemize}
 
 We do not hard-code any built-in macros into the language with keywords, 
 rather we allow the programmer to define the meaning of each macro.  
-The number of arguments for a macro may also be variable.  
+Macros can also take parameters inside angle-brackets, 
+where the \tit{expr-list} is a list of comma-separated expressions.  
+The number of arguments for a macro may also be variable, 
+and is defined by the macro's implementation.  
 The macro mechanism can potentially be used to attach attributes
 to nodes and other subnets.  
 As the list of macros grows, they should be documented here.  
 
 Examples of macros one may wish to define:
 \begin{itemize}
-\item passn
-\item passp
-\item pass
-\item assert
-\item stat
-\item comb-fb
-\item exclhi
-\item excllo
-\item bdd-order
-\item cross-coupled-inverters
+\item \ttt{passn} --- \tit{<W,L>(g,s,d)} $W$ is an optional transistor width, 
+	$L$ is an optional length.  If only one parameter is passed, 
+	it is interpreted as the width.  $g$, $s$, $d$ are the
+	gate, source, and drain, respectively.  
+	The pseudo production rule generated (\ttt{cflat prsim}) 
+	is \emph{uni-directional}, i.e. the drain is driven as the output.  
+\item \ttt{passp} --- analogous to \ttt{passn}
+\item \ttt{pass} --- full symmetric pass-gate
+\item \ttt{assert}
+\item \ttt{stat}
+\item \ttt{comb-fb}
 \end{itemize}
 
 The remaining sections discuss other extensions that have been proposed
