@@ -1,5 +1,9 @@
+% "hac.bib"
+%	$Id: hac.bib,v 1.3 2006/10/06 03:30:09 fang Exp $
 
-@ARTICLE{ref:csp,
+@STRING{ cacm = "Communications of the ACM" }
+
+@ARTICLE{ ref:csp,
 author = "C. Anthony R. Hoare",
 title = "Communicating Sequential Processes",
 journal = cacm,
