@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "main/version.cc".
 
+2006-10-06	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-80-26:
+	  No source revision.  Packaging matters.  
+	  util/test/Makefile.am, test-expect.sh.in:
+		Don't run sed script as executable, use sed -f instead.
+	  dox/lang/ some notes about PRS macros.  
+
+
 2006-10-04	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-80-25:
